# hanconv

./: .gitignore  Cargo.toml  README.md  README.zh-Hans.md  Taskfile.yaml  go.mod  go.sum  readme.md
.github/workflows/: build-go.yaml  build.yaml  release-go.yaml  release.yaml
app/: Cargo.toml  Taskfile.yaml  Tauri.toml  tauri.conf.json
app/capabilities/: default.json  default.toml
app/icons/: icon.icns
app/src/: lib.rs
bindings/py/: Cargo.toml  pyproject.toml
bindings/py/src/: lib.rs
bindings/wasm/: Cargo.toml  Taskfile.yaml
bindings/wasm/src/: lib.rs
cmd/: gen.go  hk2s.go  hk2t.go  jp2t.go  root.go  s2hk.go  s2t.go  s2tw.go  s2twp.go  t2hk.go  t2jp.go  t2s.go  t2tw.go  tw2s.go  tw2sp.go  tw2t.go  util.go
cmd/gocc/: main.go  root.go
cmd/hanconv/: main.go
cmd/hanzi/: main.go
cmd/hk2s/: main.go
cmd/hk2t/: main.go
cmd/jp2t/: main.go
cmd/s2hk/: main.go
cmd/s2t/: main.go  s2t.go
cmd/s2tw/: main.go
cmd/s2twp/: main.go
cmd/t2hk/: main.go
cmd/t2jp/: main.go
cmd/t2s/: main.go  t2s.go
cmd/t2tw/: main.go
cmd/tw2s/: main.go
cmd/tw2sp/: main.go
cmd/tw2t/: main.go
crates/hanconv/: Cargo.toml  README.md  Taskfile.yaml
crates/hanconv-app/: Cargo.toml  Taskfile.yaml  build.rs
crates/hanconv-app/locales/: app.toml
crates/hanconv-app/src/: assets.rs  config.rs  conversion.rs  main.rs
crates/hanconv-app/src/components/: about.rs  conversion_menu.rs  conversion_selector.rs  error_dialog.rs  language_selector.rs  mod.rs  status_bar.rs  toolbar.rs
crates/hanconv-cli/: Cargo.toml  README.md  Taskfile.yaml
crates/hanconv-cli/src/: main.rs
crates/hanconv/src/: conv.rs  dict.rs  lib.rs  main.rs  trie.rs
crates/trie/: Cargo.toml
crates/trie/src/: lib.rs
go/: Taskfile.yaml  conv.go  conv_test.go  dict.go  go.mod  go.sum
go/cmd/gocc/: root.go
go/cmd/hanconv/: cmd.go  main.go  root.go
go/cmd/hk2s/: main.go
go/cmd/hk2t/: main.go
go/cmd/jp2t/: main.go
go/cmd/s2hk/: main.go
go/cmd/s2t/: main.go
go/cmd/s2tw/: main.go
go/cmd/s2twp/: main.go
go/cmd/t2hk/: main.go
go/cmd/t2jp/: main.go
go/cmd/t2s/: main.go
go/cmd/t2tw/: main.go
go/cmd/tw2s/: main.go
go/cmd/tw2sp/: main.go
go/cmd/tw2t/: main.go
go/dict/: dict.go  text_dict.go
go/dict/data/: README.md
go/internal/cmd/hk2s/: hk2s.go
go/internal/cmd/hk2t/: hk2t.go
go/internal/cmd/jp2t/: jp2t.go
go/internal/cmd/s2hk/: s2hk.go
go/internal/cmd/s2t/: s2t.go
go/internal/cmd/s2tw/: s2tw.go
go/internal/cmd/s2twp/: s2twp.go
go/internal/cmd/t2hk/: t2hk.go
go/internal/cmd/t2jp/: t2jp.go
go/internal/cmd/t2s/: t2s.go
go/internal/cmd/t2tw/: t2tw.go
go/internal/cmd/tw2s/: tw2s.go
go/internal/cmd/tw2sp/: tw2sp.go
go/internal/cmd/tw2t/: tw2t.go
go/pkg/cc/: conv.go  conv_test.go
go/pkg/cc/hk2s/: hk2s.go
go/pkg/cc/hk2t/: hk2t.go
go/pkg/cc/jp2t/: jp2t.go
go/pkg/cc/s2hk/: s2hk.go  s2hk.json
go/pkg/cc/s2t/: s2t.go  s2t.json
go/pkg/cc/s2tw/: s2tw.go
go/pkg/cc/s2twp/: s2twp.go  s2twp.json
go/pkg/cc/t2hk/: t2hk.go
go/pkg/cc/t2jp/: t2jp.go
go/pkg/cc/t2s/: t2s.go  t2s.json
go/pkg/cc/t2tw/: t2tw.go  t2tw.json
go/pkg/cc/tw2s/: tw2s.go  tw2s.json
go/pkg/cc/tw2sp/: tw2sp.go  tw2sp.json
go/pkg/cc/tw2t/: tw2t.go
go/pkg/cmd/: cmd.go
go/pkg/cmd/hk2s/: hk2s.go
go/pkg/cmd/hk2t/: hk2t.go
go/pkg/cmd/jp2t/: jp2t.go
go/pkg/cmd/s2hk/: s2hk.go
go/pkg/cmd/s2t/: s2t.go
go/pkg/cmd/s2tw/: s2tw.go
go/pkg/cmd/s2twp/: s2twp.go
go/pkg/cmd/t2hk/: t2hk.go
go/pkg/cmd/t2jp/: t2jp.go
go/pkg/cmd/t2s/: t2s.go
go/pkg/cmd/t2tw/: t2tw.go
go/pkg/cmd/tw2s/: tw2s.go
go/pkg/cmd/tw2sp/: tw2sp.go
go/pkg/cmd/tw2t/: tw2t.go
go/pkg/hk2s/: hk2s.go
go/pkg/hk2t/: hk2t.go
go/pkg/jp2t/: jp2t.go
go/pkg/s2hk/: s2hk.go
go/pkg/s2t/: s2t.go
go/pkg/s2tw/: s2tw.go
go/pkg/s2twp/: s2twp.go
go/pkg/t2hk/: t2hk.go
go/pkg/t2jp/: t2jp.go
go/pkg/t2s/: t2s.go
go/pkg/t2tw/: t2tw.go
go/pkg/trie/: trie.go
go/pkg/tw2s/: tw2s.go
go/pkg/tw2sp/: tw2sp.go
go/pkg/tw2t/: tw2t.go
go/trie/: trie.go  trie_test.go
pkg/cc/: conv.go  conv_test.go
pkg/cc/hk2s/: hk2s.go  hk2s.json
pkg/cc/hk2t/: hk2t.go  hk2t.json
pkg/cc/jp2t/: jp2t.json
pkg/cc/s2t/: s2t.json
pkg/cc/s2tw/: s2tw.go  s2tw.json
pkg/cc/s2twp/: s2twp.go
pkg/cc/t2hk/: t2hk.json
pkg/cc/t2jp/: t2jp.go  t2jp.json
pkg/cc/t2s/: t2s.go
pkg/cc/tw2s/: tw2s.go  tw2s.json
pkg/cc/tw2t/: tw2t.json
pkg/cmd/: cmd.go
pkg/cmd/hk2s/: hk2s.go
pkg/cmd/hk2t/: hk2t.go
pkg/cmd/jp2t/: jp2t.go
pkg/cmd/s2hk/: s2hk.go
pkg/cmd/s2t/: s2t.go
pkg/cmd/s2tw/: s2tw.go
pkg/cmd/s2twp/: s2twp.go
pkg/cmd/t2hk/: t2hk.go
pkg/cmd/t2jp/: t2jp.go
pkg/cmd/t2s/: t2s.go
pkg/cmd/t2tw/: t2tw.go
pkg/cmd/tw2s/: tw2s.go
pkg/cmd/tw2sp/: tw2sp.go
pkg/cmd/tw2t/: tw2t.go
pkg/hanconv/: conv.go  conv_test.go  util.go  util_test.go
pkg/hanzi/: conv.go  conv_test.go  util.go  util_test.go
pkg/hanzi/conv/: conv.go
pkg/hk2s/: hk2s.go  hk2s.json
pkg/hk2t/: hk2t.go  hk2t.json
pkg/jp2t/: jp2t.go  jp2t.json
pkg/s2hk/: s2hk.go  s2hk.json
pkg/s2t/: s2t.go  s2t.json
pkg/s2tw/: s2tw.go  s2tw.json
pkg/s2twp/: s2twp.go  s2twp.json
pkg/t2hk/: t2hk.go  t2hk.json
pkg/t2jp/: t2jp.go  t2jp.json
pkg/t2s/: t2s.go  t2s.json
pkg/t2tw/: t2tw.go  t2tw.json
pkg/trie/: trie.go  trie_test.go
pkg/tw2s/: tw2s.go  tw2s.json
pkg/tw2sp/: tw2sp.go  tw2sp.json
pkg/tw2t/: tw2t.go  tw2t.json
tools/: Taskfile.yaml  go.mod  go.sum
tools/update/: main.go
web/: Taskfile.yaml  biome.json  index.html  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.svelte  app.css  hanconv.ts  main.ts
web/src/lib/: i18n.svelte.ts
web/src/lib/locales/: zh-Hans.json  zh-Hant.json
web/src/lib/states/: conversion.svelte.ts
web/src/lib/ui/: ConversionSelector.svelte  DragOverlay.svelte  EncodingSelector.svelte  (+8 more)
web/src/locales/: en.json
web/src/ui/: ConversionSelector.svelte  DragOverlay.svelte  Editor.svelte  EncodingSelector.svelte  FontFamilySelector.svelte  FontSettings.svelte  FontSizeControl.svelte  LanguageSelector.svelte  Sidebar.svelte  StatusBar.svelte  Toolbar.svelte
