[package]
name = "hanconv-tauri"
version = "0.2.0"
edition = "2024"

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["config-toml"] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-process = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hanconv = { workspace = true }
window-vibrancy = "0.6"
