[package]
name = "hanconv-app"
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
description = "Convert between Chinese characters variants."
categories = ["text-processing", "gui"]
keywords = ["chinese", "simplified-chinese", "traditional-chinese"]
repository = "https://github.com/fhluo/hanconv"
license = "MIT"
exclude = ["Taskfile.yaml"]

[dependencies]
hanconv = "0.5"
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
anyhow = "1.0"
