[package]
name = "hanconv-app"
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
description = "Convert between Chinese characters variants."
categories = ["text-processing", "gui"]
keywords = ["chinese", "simplified-chinese", "traditional-chinese"]
repository = "https://github.com/fhluo/hanconv"
license = "MIT"
exclude = ["Taskfile.yaml"]

[dependencies]
hanconv = "0.5"
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
rust-i18n = "3.1"
sys-locale = "0.3"
icu_locale = { version = "2.1", features = ["compiled_data", "serde"] }
confy = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
