[package]
name = "hanconv-app"
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
description = "Convert between Chinese characters variants."
categories = ["text-processing", "gui"]
keywords = ["chinese", "simplified-chinese", "traditional-chinese"]
repository = "https://github.com/fhluo/hanconv"
license = "MIT"
exclude = ["Taskfile.yaml"]

[dependencies]
hanconv = "0.5"
gpui = { git = "https://github.com/zed-industries/zed", features = ["windows-manifest"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
rust-i18n = "3.1"
sys-locale = "0.3"
icu_locale = { version = "2.1", features = ["compiled_data", "serde"] }
confy = { version = "2.0" }
rust-embed = "8.9"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "1.2", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
anyhow = "1.0"

[build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "Hanconv"
ProductName = "Hanconv"
LegalCopyright = "Copyright (c) 2022 fhluo"
