[package]
name = "hanconv-cli"
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
description = "Convert between Chinese characters variants."
categories = ["text-processing", "command-line-utilities"]
keywords = ["chinese", "simplified-chinese", "traditional-chinese"]
repository = "https://github.com/fhluo/hanconv"
license = "MIT"
exclude = ["Taskfile.yaml"]

[[bin]]
name = "hanconv"
path = "src/main.rs"

[dependencies]
hanconv = "0.5"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
rayon = "1.11"
