[package]
name = "hanconv"
version = "0.3.3"
edition = "2024"
description = "Convert between Chinese characters variants."
keywords = ["chinese"]
repository = "https://github.com/fhluo/hanconv"
license = "MIT"
exclude = ["Taskfile.yaml"]

[dependencies]
ahash = "0.8"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
rayon = "1.10"
