[package]
name = "hanconv"
version = "0.4.1"
edition = "2024"
rust-version = "1.88"
description = "Convert between Chinese characters variants."
categories = ["text-processing", "command-line-utilities"]
keywords = ["chinese", "simplified-chinese", "traditional-chinese"]
repository = "https://github.com/fhluo/hanconv"
license = "MIT"
exclude = ["Taskfile.yaml"]

[dependencies]
ahash = "0.8"
clap = { version = "4.5", features = ["derive"] }
encoding_rs = "0.8"
rayon = "1.11"
